# anime-mood-agent-studio

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: __init__.py  agent.py  chinese_emotion_model.py  config.py  drift.py  evaluation.py  feedback_store.py  fusion.py  hard_examples.py  image_emotion.py  jobs.py  llm_emotion.py  rag.py  response_lab.py  schemas.py  semantic.py  text_emotion.py  video_emotion.py
app/data/: hard_examples.jsonl  player_feedback_samples.csv  rag_knowledge_chunks.jsonl
app/static/: app.js  index.html  styles.css
skills/anime-agent-evaluation-loop/: SKILL.md
skills/anime-game-emotion-fusion/: SKILL.md
skills/anime-game-rag-ops-policy/: SKILL.md
skills/anime-liveops-risk-triage/: SKILL.md
skills/anime-narrative-feedback-agent/: SKILL.md
skills/anime-player-memory-personalization/: SKILL.md
tests/: test_api.py  test_emotion_pipeline.py  test_platform_extensions.py
